...
              TextButton(
                onPressed: _betterPlayerController.play,
                child: const Text('Play'),
              ),
              TextButton(
                onPressed: _betterPlayerController.pause,
                child: const Text('Pause'),
              ),
              TextButton(
                child: const Text('Hide controls'),
                onPressed: () {
                  _betterPlayerController.setControlsVisibility(false);
                },
...
