...
    this.overflowMenuPlaybackSpeed = 'Playback speed',
    this.overflowMenuSubtitles = 'Subtitles',
    this.overflowMenuQuality = 'Quality',
    this.overflowMenuAudioTracks = 'Audio',
    this.qualityAuto = 'Auto',
    this.controlsPlayLabel = 'Play',
    this.controlsPauseLabel = 'Pause',
    this.controlsMuteLabel = 'Mute',
    this.controlsUnmuteLabel = 'Unmute',
    this.controlsFullscreenLabel = 'Enter fullscreen',
    this.controlsExitFullscreenLabel = 'Exit fullscreen',
    this.controlsSkipForwardLabel = 'Skip forward',
    this.controlsSkipBackwardLabel = 'Skip backward',
    this.progressBarLabel = 'Video progress',
    this.overflowMenuLabel = 'More options',
    this.controlsPipLabel = 'Picture-in-Picture',
    this.overflowMenuCancelLabel = 'Cancel',
    this.overflowMenuScrimLabel = 'Dismiss',
    this.overflowMenuScrimHint = 'Close',
  });

  factory PlayerTranslations.polish() => PlayerTranslations(
    languageCode: 'pl',
    generalDefaultError: 'Video nie może zostać odtworzone',
    generalNone: 'Brak',
...
